<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_build_information"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_4dp"
    app:cardElevation="@dimen/card_3dp"
    app:cardUseCompatPadding="true"
    tools:showIn="@layout/activity_crash">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp">

        <TextView
            android:id="@+id/tv_device_information"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/crash_information"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e9e9e9" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/time_of_crash"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/tv_crash_time"
                android:background="#eeeeee"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_3dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crash_message"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/tv_crash_message"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_3dp"
                android:background="#eeeeee"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crash_type"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/tv_crash_type"
                android:background="#eeeeee"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_3dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/method"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/tv_crash_method"
                android:background="#eeeeee"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_3dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crash_filename"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/tv_crash_filename"
                android:background="#eeeeee"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_3dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crash_classname"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/tv_crash_classname"
                android:background="#eeeeee"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_3dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/crash_line_number"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/tv_crash_line_number"
                android:background="#eeeeee"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_3dp"
                android:text="@string/placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/crash_full_stacktrace"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <TextView
                android:id="@+id/tv_crash_full_stacktrace"
                android:textColor="#FF6E40"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/placeholder"
                android:textIsSelectable="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        </ScrollView>
    </LinearLayout>

</androidx.cardview.widget.CardView>