<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_build_information"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_4dp"
    app:cardElevation="@dimen/card_3dp"
    app:cardUseCompatPadding="true"
    tools:showIn="@layout/activity_crash">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8dp">

        <TextView
            android:id="@+id/tv_device_information"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/device_information"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e9e9e9" />

        <TableLayout
            android:layout_marginTop="@dimen/margin_3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_manufacturer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_manufacturer"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_model"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_model"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/brand"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_brand"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_resolution"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_resolution"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_density"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_density"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_release"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_release"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_sdk"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_sdk"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/device_cpu_abi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/tv_device_cpu_abi"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_3dp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>